<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/customborder">

        <TextView
            android:id="@+id/problem_name"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/table_item_name"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/problem_grade"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/table_item_grade"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/problem_setter"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/table_item_setter"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/problem_comment"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/table_item_comment"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
</LinearLayout>