<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_activity_back"
            android:onClick="ClickBack"
            android:background="@drawable/rounded_button"
            style="@style/WhiteText"/>

    </LinearLayout>

    <TextView
        android:id="@+id/slider_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_activity_grade_range"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/WhiteText"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/grade_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="23.0"
        app:labelBehavior="withinBounds"
        app:values="@array/initial_values_slider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_activity_first_grade"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            style="@style/WhiteText"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_activity_last_grade"
            android:textStyle="bold"
            android:textSize="20sp"
            style="@style/WhiteText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ascending"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_weight="0.5"
            android:gravity="center"
            android:buttonTint="@color/colorBlue"
            android:text="@string/filter_activity_ascending"
            style="@style/WhiteText"/>
        <CheckBox
            android:id="@+id/descending"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:layout_weight="0.5"
            android:gravity="center"
            android:buttonTint="@color/colorBlue"
            android:text="@string/filter_activity_descending"
            style="@style/WhiteText"/>
    </LinearLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/filter_activity_apply"
        android:onClick="ApplyFilters"
        android:background="@drawable/rounded_button"
        style="@style/WhiteText"/>

</LinearLayout>